k8s/security/opa/no-latest-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snotlatest
spec:
  crd:
    spec:
      names:
        kind: K8sNotLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snotlatest

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("Container uses latest tag: %v", [container.image])
        }
